[package]
name = "zephyr"
version = "0.1.0"
edition = "2024"

[lib]
name = "zephyr"
path = "src/lib.rs"

[[bin]]
name = "zephyr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls", "brotli", "gzip", "deflate"] }
scraper = "0.24"
url = "2.5"

[dev-dependencies]
pretty_assertions = "1"
